2010-05-06  Tobias Burnus  <burnus@net-b.de>

	PR fortran/43985
	* gfortran.dg/gomp/crayptr5.f90: New test case.

2010-05-05  Jason Merrill  <jason@redhat.com>

	PR debug/43370
	* g++.dg/ext/attrib39.C: New.

2010-05-05  Richard Guenther  <rguenther@suse.de>

	PR c++/43880
	* g++.dg/torture/pr43880.C: New testcase.

2010-05-05  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/43592
	* gfortran.dg/unexpected_interface.f90: New test.

2010-05-04  Jason Merrill  <jason@redhat.com>

	PR c++/38064
	* g++.dg/cpp0x/enum3.C: Extend.

2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/43671
	* gcc.target/i386/pr43671.c: New.

2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-05-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR debug/43508
	* gcc.target/i386/pr43508.c: New.

2010-05-03  Dodji Seketeli  <dodji@redhat.com>

	PR c++/43953
	* g++.dg/other/crash-12.C: New test.

2010-05-03  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-05-03  H.J. Lu  <hongjiu.lu@intel.com>

	* g++.dg/cdce3.C: Add a space.  Updated.

2010-05-03  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.dg/cdce3.C: Skip on alpha*-dec-osf5*.
	* g++.dg/ext/label13.C: Fix typo.
	* g++.dg/warn/miss-format-1.C (bar): xfail dg-warning on
	alpha*-dec-osf5*.
	* gcc.c-torture/compile/limits-declparen.c: xfail on
	alpha*-dec-osf5* with -g.
	* gcc.c-torture/compile/limits-pointer.c: Likewise.
	* gcc.dg/c99-tgmath-1.c: Skip on alpha*-dec-osf5*.
	* gcc.dg/c99-tgmath-2.c: Likewise.
	* gcc.dg/c99-tgmath-3.c: Likewise.
	* gcc.dg/c99-tgmath-4.c: Likewise.

2010-05-03  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* ada/acats/run_acats (which): New function.
	(host_gnatchop, host_gnatmake): Use it.

2010-05-03  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43972
	* gcc.dg/debug/pr43972.c: New test.

2010-04-30  Jason Merrill  <jason@redhat.com>

	PR c++/43868
	* g++.dg/template/ptrmem21.C: New.
