@@ -1,3 +1,8 @@
+2010-05-06  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/40406
+	* g++.dg/template/crash96.C: New.
+
 2010-05-06  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/43985
